Cleaned up code to remove IntelliJ warnings